<resources>
    <string name="app_name">Projet_d\'intégration</string>
    <string name="title_activity_music__page">Music_Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="homescreen_favoris">Vos favoris</string>
    <string name="homescreen_listes_lecture">Vos listes de lecture</string>
    <string name="homescreen_albums">Vos albums</string>
    <string name="homescreen_artiste">Vos artistes</string>
    <string name="nav_home">Page d\'accueil</string>
    <string name="nav_favoris">Favoris</string>
    <string name="nav_liste_lecture">Listes de lecture</string>
    <string name="nav_bibliotheque">Bibliothèque</string>
    <string name="nav_spotify_liercompte">Lier un compte</string>
    <string name="nav_spotify_section">Spotify</string>
    <string name="nav_spotify_liste_lecture">Listes de lecture Spotify</string>
    <string name="nav_spotify_aimee">Chansons aimées</string>
    <string name="nav_spotify_bibliotheque">Bibliothèque Spotify</string>
    <string name="nav_spotify_logout">Déconnecter son compte Spotify</string>
    <string name="nav_spotify_recently_listened">Écoutées récemment</string>
    <string name="nav_mediaActivity">En écoute</string>
    <string name="navigation_open_drawer_description">Ouvrir le menu</string>
    <string name="navigation_close_drawer_description">Fermer le menu</string>
    <string name="loadmore">Veuillez patienter, en recherche de plus de contenu</string>
    <string name="spotify_bibliotheque_default_categorie">Votre bibliothèque</string>
    <string name="spotify_playlist_view_base_text">Vos listes de lectures</string>
    <string name="spotify_not_found">Spotify n\'a pas été trouvé, voulez-vous télécharger l\'application du Google Play Store ?</string>
    <string name="alertbox_positive_button_text">OUI</string>
    <string name="alertbox_negative_button_text">NON</string>
    <string name="spotify_deconnexion_prompt">Voulez-vous vraiment vous déconnecter de Spotify ?</string>
    <string name="spotify_recently_played_base_text">Écoutées récemment</string>

    <string name="favorites">Aimer</string>
    <string name="play_next">Écouter après</string>
    <string name="play_now">Écouter maintenant</string>
    <string name="add_to_queue">Ajouter à la file</string>
    <string name="add_to_playlist">Ajouter à une liste</string>
    <string name="remove_from_list">Enlever de la liste</string>
    <string name="music_of_artist">Autres musiques par l\'artist</string>
    <string name="music_in_album">Autres musiques de l\'album</string>
    <string name="like_on_spotify">Ajouter au favoris Spotify</string>
    <string name="add_to_spotify_list">Ajouter l\'album à votre bibiliothèque</string>
    <string name="remove_from_spotify_list">Enlever l\'album de votre bibiliothèque</string>

    <string name="editPlaylistName">Changer de nom</string>
    <string name="deletePlaylist">Supprimer</string>
    <string name="makeRelative">Relative</string>

    <string name="placeholderPlaylistName">Nom</string>




</resources>