<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/playNow"
            android:title="@string/play_now"/>
        <item
            android:id="@+id/playNext"
            android:title="@string/play_next"/>
        <item
            android:id="@+id/addToQueue"
            android:title="@string/add_to_queue"/>
        <item
            android:id="@+id/addToPlaylist"
            android:title="@string/add_to_playlist"/>
        <item
            android:id="@+id/musicOfArtist"
            android:title="@string/music_of_artist"/>
        <item
            android:id="@+id/musicInAlbum"
            android:title="@string/music_in_album"/>
        <!--<item
            android:id="@+id/addToSpotifyFav"
            android:title="@string/like_on_spotify"/>-->
        <item
            android:id="@+id/addToSpotifyPlaylist"
            android:title="@string/add_to_spotify_list"/>
    </group>

</menu> 